[gd_scene load_steps=5 format=3 uid="uid://dnh2tu3ju0e26"]

[ext_resource type="Script" path="res://scenes/ImageLoader.gd" id="1_j07pe"]
[ext_resource type="Script" path="res://scenes/ImageBox.gd" id="2_vsm7g"]
[ext_resource type="Script" path="res://core/classes/RunPython.gd" id="3_pmo71"]
[ext_resource type="Script" path="res://core/classes/AutoSelector.gd" id="4_sxujo"]

[node name="ImageLoader" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_j07pe")

[node name="ImageBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_vsm7g")

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 3

[node name="PythonManager" type="Node" parent="."]
script = ExtResource("3_pmo71")

[node name="AutoSelector" type="Node" parent="."]
script = ExtResource("4_sxujo")
